--- a/package.json
+++ b/package.json
@@ -12,23 +12,30 @@
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run install-client && npm run build"
   },
-  "keywords": ["mern", "social-media", "ai", "aura", "gamification"],
+  "keywords": [
+    "mern",
+    "social-media",
+    "ai",
+    "aura",
+    "gamification"
+  ],
   "author": "Aurameter Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "multer": "^1.4.5-lts.1",
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.10.0",
     "helmet": "^7.0.0",
-    "express-rate-limit": "^6.10.0"
+    "html2canvas": "^1.4.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "concurrently": "^8.2.0"
+    "concurrently": "^8.2.0",
+    "nodemon": "^3.0.1"
   }
-} 
+}
